<resources>
    <string name="app_name">pet-shop</string>
    <string name="escolha_qual_cachorro_deseja">Escolha qual cachorro deseja:</string>
    <string name="pit_bull_r_750_00">Pit Bull R$ 750,00</string>
    <string name="border_collie_r_800_00">Border Collie R$ 800,00</string>
    <string name="pastor_alemao_700">Pastor Alemão R$ 700,00</string>
    <string name="pastor_canadense_800">Pastor canadense R$ 800,00</string>
    <string name="femea">Fêmea</string>
    <string name="vacina_em_dia">Com todas vacinas em dia</string>
    <string name="adestrado">Adestrado</string>
    <string name="calcular">Calcular</string>
</resources>
